<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView android:text="@string/Ingrese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:shrinkColumns="*"
            android:stretchColumns="*"
            >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="2dp">
                <TextView
                    android:id="@+id/TextView1"
                    android:text="%"
                    android:layout_weight="1"
                    android:background="@color/gainsboro"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:padding="15dip"

                    android:gravity="center"/>
                <TextView
                    android:id="@+id/TextView2"
                    android:text="@string/Activity"

                    android:layout_weight="1"
                    android:background="@color/lightgray"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:padding="15dip"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/TextView3"
                    android:text="@string/Califica"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:background="@color/silver"
                    android:textColor="#000000"
                    android:padding="15dip"
                    android:gravity="center"/>
            </TableRow>
            <TableRow
                android:id="@+id/tableRow3"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="2dp">
                <TextView
                    android:id="@+id/TextView4"
                    android:text="15"
                    android:layout_weight="1"
                    android:background="@color/lavender"
                    android:textColor="@color/black"
                    android:padding="15dip"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/TextView5"
                    android:text="@string/Quiz"
                    android:layout_weight="1"
                    android:background="@color/whitesmoke"
                    android:textColor="@color/black"
                    android:padding="15dip"
                    android:gravity="center"/>
                <EditText
                    android:id="@+id/Iquices"
                    android:hint="--"
                    android:layout_weight="1"
                    android:background="@color/lavender"
                    android:textColor="@color/darkblue"
                    android:padding="13dip"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:maxLength="3"/>
            </TableRow>
            <TableRow
                android:id="@+id/tableRow2"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="2dp">
                <TextView
                    android:id="@+id/TextView6"
                    android:text="10"
                    android:layout_weight="1"
                    android:background="@color/lavender"
                    android:textColor="@color/black"
                    android:padding="15dip"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/TextView7"
                    android:text="@string/Expo"
                    android:layout_weight="1"
                    android:background="@color/whitesmoke"
                    android:textColor="@color/black"
                    android:padding="15dip"
                    android:gravity="center"/>
                <EditText
                    android:id="@+id/Iexposiciones"
                    android:hint="--"
                    android:layout_weight="1"
                    android:background="@color/lavender"
                    android:textColor="@color/darkblue"
                    android:padding="13dip"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:maxLength="3"/>
            </TableRow>
            <TableRow
                android:id="@+id/tableRow4"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="2dp">
                <TextView
                    android:id="@+id/TextView8"
                    android:text="40"
                    android:layout_weight="1"
                    android:background="@color/lavender"
                    android:textColor="@color/black"
                    android:padding="15dip"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/TextView9"
                    android:text="@string/Practi"
                    android:layout_weight="1"
                    android:background="@color/whitesmoke"
                    android:textColor="@color/black"
                    android:padding="15dip"
                    android:gravity="center"/>
                <EditText
                    android:id="@+id/Ipracticas"
                    android:hint="--"
                    android:layout_weight="1"
                    android:background="@color/lavender"
                    android:textColor="@color/darkblue"
                    android:padding="13dip"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:maxLength="3"/>/>
            </TableRow>
            <TableRow
                android:id="@+id/tableRow5"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="2dp">
                <TextView
                    android:id="@+id/TextView10"
                    android:text="35"
                    android:layout_weight="1"
                    android:background="@color/lavender"
                    android:textColor="@color/black"
                    android:padding="15dip"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/TextView11"
                    android:text="@string/Proyect"
                    android:layout_weight="1"
                    android:background="@color/whitesmoke"
                    android:textColor="@color/black"
                    android:padding="15dip"
                    android:gravity="center"/>
                <EditText
                    android:id="@+id/Iproyecto"
                    android:hint="--"
                    android:layout_weight="1"
                    android:background="@color/lavender"
                    android:textColor="@color/darkblue"
                    android:padding="13dip"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:maxLength="3"/>/>
            </TableRow>

        </TableLayout>


    </LinearLayout>
    <Button
        android:id="@+id/Icalular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Calcula"
        android:onClick="metodoCalcula"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.5">


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notaF"
                android:textStyle="bold"
                android:textSize="35dp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/InotaF"
                android:hint=" --"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="35dp"
                android:textColor="@color/green"
                android:maxLength="4"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
